welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type YELLOW
def faireV(c: YELLOW) {
              ^MethodsPicture:24: error: not found: value YELLOW
faireV(YELLOW)
       ^