welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {


def faireV(c: YELLOW) {
	avance()
	setCouleurBrosse(Color.yellow)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
		
}
faireV(YELLOW)
}








